--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="printer_active">Active Printer :</string>
     <string name="send">Send</string>
+    <string name="sendImg">Send Image</string>
     <string name="openprinterlist">Open Printer List</string>
 </resources>
